[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Scripts/PlayerStats.gd" type="Script" id=1]
[ext_resource path="res://Player/Texturen/HealthBar_5L.png" type="Texture" id=2]
[ext_resource path="res://Player/Heart.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Texturen/HealthBar_8L.png" type="Texture" id=4]
[ext_resource path="res://Engine/Font/light/light_12px.tres" type="DynamicFont" id=5]

[node name="PlayerStats" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MediumHealth" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="HealthBar_5L" type="Sprite" parent="MediumHealth"]
position = Vector2( 54, 18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Hearts" type="Node2D" parent="MediumHealth"]
editor/display_folded = true

[node name="Heart1" parent="MediumHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 28, 17.5 )

[node name="Heart2" parent="MediumHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 41, 17.5 )

[node name="Heart3" parent="MediumHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 54, 17.5 )

[node name="Heart4" parent="MediumHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 67, 17.5 )

[node name="Heart5" parent="MediumHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 80, 17.5 )

[node name="HighHealth" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="HealthBar_8L" type="Sprite" parent="HighHealth"]
position = Vector2( 73.5, 18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Hearts" type="Node2D" parent="HighHealth"]

[node name="Heart1" parent="HighHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 28, 17.5 )

[node name="Heart2" parent="HighHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 41, 17.5 )

[node name="Heart3" parent="HighHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 54, 17.5 )

[node name="Heart4" parent="HighHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 67, 17.5 )

[node name="Heart5" parent="HighHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 79.5, 17.5 )

[node name="Heart6" parent="HighHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 92.5, 17.5 )

[node name="Heart7" parent="HighHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 105.5, 17.5 )

[node name="Heart8" parent="HighHealth/Hearts" instance=ExtResource( 3 )]
position = Vector2( 118.5, 17.5 )

[node name="Objektiv" type="Label" parent="."]
margin_left = 135.0
margin_top = 15.0
margin_right = 384.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 5 )
align = 2
autowrap = true
